Fix comments     * Change description to truncate from 24 chars to 63 chars     * Change app label from gocd.fullname to gocd.name     * Remove unnecessary selectors     * Add gocd.name suffix to all the component label     * Disable ingress and server persistence by default     * Use subpath for go-sever /home/go and for /godata persistence volumes

--- a/incubator/gocd/templates/gocd-agent-deployment.yaml
+++ b/incubator/gocd/templates/gocd-agent-deployment.yaml
@@ -3,30 +3,25 @@ kind: Deployment
 metadata:
   name: {{ template "gocd.fullname" . }}-agent
   labels:
-    app: {{ template "gocd.fullname" . }}-agent
+    app: {{ template "gocd.name" . }}-agent
     chart:  "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    component: agent
+    component: {{ template "gocd.name" . }}-agent
 spec:
   replicas: {{ .Values.agent.replicaCount }}
-  selector:
-    matchLabels:
-      app: {{ template "gocd.fullname" . }}-agent
-      release: {{ .Release.Name | quote }}
-      component: agent
   template:
     metadata:
       labels:
-        app: {{ template "gocd.fullname" . }}-agent
+        app: {{ template "gocd.name" . }}-agent
         release: {{ .Release.Name | quote }}
-        component: agent
+        component: {{ template "gocd.name" . }}-agent
     spec:
       {{- if .Values.agent.persistence.enabled }}
       volumes:
         - name: homego-vol
           persistentVolumeClaim:
-            claimName: {{ template "gocd.fullname" . }}-agent-home
+            claimName: {{ template "gocd.fullname" . }}-agent
       {{- end }}
       containers:
         - name: {{ template "gocd.name" . }}-agent
