--- a/incubator/gocd/templates/gocd-server-deployment.yaml
+++ b/incubator/gocd/templates/gocd-server-deployment.yaml
@@ -7,31 +7,23 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    component: server
+    component: {{ template "gocd.name" . }}-server
 spec:
   {{- if le .Values.server.replicaCount 1.0 }}
   replicas: {{ .Values.server.replicaCount }}
   {{- end }}
-  selector:
-    matchLabels:
-      app: {{ template "gocd.name" . }}
-      release: {{ .Release.Name | quote }}
-      component: server
   template:
     metadata:
       labels:
         app: {{ template "gocd.name" . }}
         release: {{ .Release.Name | quote }}
-        component: server
+        component: {{ template "gocd.name" . }}-server
     spec:
       {{- if .Values.server.persistence.enabled }}
       volumes:
-        - name: godata-vol
+        - name: goserver-vol
           persistentVolumeClaim:
-            claimName: {{ template "gocd.fullname" . }}-data
-        - name: homego-vol
-          persistentVolumeClaim:
-           claimName: {{ template "gocd.fullname" . }}-home
+            claimName: {{ template "gocd.fullname" . }}
       {{- end }}
       containers:
         - name: {{ template "gocd.name" . }}-server
@@ -62,10 +54,12 @@ spec:
             initialDelaySeconds: {{ .Values.server.healthCheck.initialDelaySeconds }}
           {{- if .Values.server.persistence.enabled }}
           volumeMounts:
-          - name: godata-vol
+          - name: goserver-vol
             mountPath: /godata
-          - name: homego-vol
+            subPath: {{ .Values.server.persistence.subpath.godata }}
+          - name: goserver-vol
             mountPath: /home/go
+            subPath: {{ .Values.server.persistence.subpath.homego }}
           {{- end }}
           resources:
 {{ toYaml .Values.server.resources | indent 12 }}
