--- a/stable/sonarqube/templates/service.yaml
+++ b/stable/sonarqube/templates/service.yaml
@@ -11,7 +11,9 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.externalPort }}
+{{- if ne .Values.service.type "ClusterIP" }}
       targetPort: {{ .Values.service.internalPort }}
+{{- end }}
       protocol: TCP
       name: {{ .Values.service.name }}
   selector:
