[stable/metabase] Support database.connectionURI
This commit allows configuration of custom database connection URI with
as per https://github.com/metabase/metabase/blob/master/bin/start

--- a/stable/metabase/values.yaml
+++ b/stable/metabase/values.yaml
@@ -31,6 +31,8 @@ database:
   # dbname:
   # username:
   # password:
+  ## Alternatively, use a connection URI for full configurability. Example for SSL enabled Postgres.
+  # connectionURI: postgres://user:password@host:port/database?ssl=true&sslmode=require&sslfactory=org.postgresql.ssl.NonValidatingFactory"
 
 password:
   # Changing Metabase password complexity:
