--- a/stable/metabase/templates/database-secret.yaml
+++ b/stable/metabase/templates/database-secret.yaml
@@ -10,6 +10,10 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
+  {{- if .Values.database.connectionURI }}
+  connectionURI: {{ .Values.database.connectionURI | b64enc | quote }}
+  {{- else }}
   username: {{ .Values.database.username | b64enc | quote }}
   password: {{ .Values.database.password | b64enc | quote }}
+  {{- end }}
 {{- end }}
