--- a/stable/metabase/templates/deployment.yaml
+++ b/stable/metabase/templates/deployment.yaml
@@ -45,6 +45,13 @@ spec:
           - name: MB_ENCRYPTION_SECRET_KEY
             value: {{ .Values.database.encryptionKey | quote }}
           {{- if ne (.Values.database.type | lower) "h2" }}
+            {{- if .Values.database.connectionURI }}
+          - name: MB_DB_CONNECTION_URI
+            valueFrom:
+              secretKeyRef:
+                name: {{ template "metabase.fullname" . }}-database
+                key: connectionURI
+            {{- else }}
           - name: MB_DB_HOST
             value: {{ .Values.database.host | quote }}
           - name: MB_DB_PORT
@@ -61,6 +68,7 @@ spec:
               secretKeyRef:
                 name: {{ template "metabase.fullname" . }}-database
                 key: password
+            {{- end }}
           {{- end }}
           - name: MB_PASSWORD_COMPLEXITY
             value: {{ .Values.password.complexity }}
