[stable/metabase] Store encryption key as secret

--- a/stable/metabase/templates/database-secret.yaml
+++ b/stable/metabase/templates/database-secret.yaml
@@ -10,6 +10,7 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
+  encryptionKey: {{ .Values.database.encryptionKey | b64enc | quote }}
   {{- if .Values.database.connectionURI }}
   connectionURI: {{ .Values.database.connectionURI | b64enc | quote }}
   {{- else }}
