--- a/stable/consul/templates/consul.yaml
+++ b/stable/consul/templates/consul.yaml
@@ -29,7 +29,7 @@ spec:
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
-  name: "{{ template "fullname" . }}-pdb"
+  name: "{{ template "consul.fullname" . }}-pdb"
 spec:
   maxUnavailable: {{ .Values.maxUnavailable }}
   selector:
