[stable/consul] #1785 namespace defined templates with chart name (#1985)
* [stable/consul] #1785 namespace defined templates with chart name

* Fix Circle CI failure

Added the missed out namespace entry

--- a/stable/consul/templates/consul-test.yaml
+++ b/stable/consul/templates/consul-test.yaml
@@ -31,7 +31,7 @@ spec:
   volumes:
   - name: tests
     configMap:
-      name: {{ template "fullname" . }}-tests
+      name: {{ template "consul.fullname" . }}-tests
   - name: tools
     emptyDir: {}
   restartPolicy: Never
