--- a/stable/consul/templates/test-config.yaml
+++ b/stable/consul/templates/test-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}-tests
+  name: {{ template "consul.fullname" . }}-tests
 data:
   run.sh: |-
     @test "Testing Consul cluster has quorum" {
