--- a/stable/owncloud/values.yaml
+++ b/stable/owncloud/values.yaml
@@ -85,6 +85,12 @@ persistence:
     ##   GKE, AWS & OpenStack)
     ##
     # storageClass: "-"
+
+    ## A manually managed Persistent Volume and Claim
+    ## Requires persistence.enabled: true
+    ## If defined, PVC must be created manually before volume will be bound
+    # existingClaim:
+
     accessMode: ReadWriteOnce
     size: 1Gi
   owncloud:
@@ -96,6 +102,12 @@ persistence:
     ##   GKE, AWS & OpenStack)
     ##
     # storageClass: "-"
+
+    ## A manually managed Persistent Volume and Claim
+    ## Requires persistence.enabled: true
+    ## If defined, PVC must be created manually before volume will be bound
+    # existingClaim:
+
     accessMode: ReadWriteOnce
     size: 8Gi
 
