--- a/stable/owncloud/values.yaml
+++ b/stable/owncloud/values.yaml
@@ -8,12 +8,23 @@ image: bitnami/owncloud:10.0.3-r0
 ##
 imagePullPolicy: IfNotPresent
 
+## For Kubernetes v1.4, v1.5 and v1.6, use 'extensions/v1beta1'
+## For Kubernetes v1.7, use 'networking.k8s.io/v1'
+networkPolicyApiVersion: extensions/v1beta1
+
 ## Allowing use of ingress controllers
 ## ref: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ##
 ingress:
   enabled: false
   servicePort: http
+  annotations:
+    # kubernetes.io/ingress.class: nginx
+    # ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/24,172.10.0.1"
+  tls:
+    # - secretName: owncloud.cluster.local
+    #   hosts:
+    #     - owncloud.cluster.local
 
 ## ownCloud host to create application URLs
 ## ref: https://github.com/bitnami/bitnami-docker-owncloud#configuration
