--- a/incubator/keycloak/values.yaml
+++ b/incubator/keycloak/values.yaml
@@ -185,3 +185,9 @@ postgresql:
     ## Enable PostgreSQL persistence using Persistent Volume Claims.
     ##
     enabled: true
+
+test:
+  image:
+    repository: unguiculus/docker-python3-phantomjs-selenium
+    tag: v1
+    pullPolicy: IfNotPresent
