Create Confluent Kafka Schema-Registry Chart

--- a/incubator/kafka/values.yaml
+++ b/incubator/kafka/values.yaml
@@ -18,6 +18,15 @@ Storage: "1Gi"
 DataDirectory: "/opt/kafka/data"
 
 # ------------------------------------------------------------------------------
+# Schema Registry:
+# ------------------------------------------------------------------------------
+
+## Install Confluent Schema Registry server alongside Kafka to track Avro Schemas
+schema-registry:
+  Enabled: false
+
+
+# ------------------------------------------------------------------------------
 # Zookeeper:
 # ------------------------------------------------------------------------------
 
