--- a/incubator/schema-registry/requirements.yaml
+++ b/incubator/schema-registry/requirements.yaml
@@ -2,5 +2,5 @@ dependencies:
 - name: kafka
   version: 0.2.2
   repository: https://kubernetes-charts-incubator.storage.googleapis.com/
-  condition: Kafka.Enabled
+  condition: kafka.enabled
 
