--- a/incubator/schema-registry/values.yaml
+++ b/incubator/schema-registry/values.yaml
@@ -4,26 +4,26 @@
 # name: value
 
 ## schema-registry repository
-Image: "confluentinc/cp-schema-registry"
+image: "confluentinc/cp-schema-registry"
 ## The container tag to use
-ImageTag: "4.0.0"
+imageTag: "4.0.0"
 ## Specify a imagePullPolicy
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-ImagePullPolicy: "IfNotPresent"
+imagePullPolicy: "IfNotPresent"
 
 ## Number of Schema Registry Pods to Deploy
-ReplicaCount: 1
+replicaCount: 1
 
 ## Schema Registry Settings Overrides
 ## Configuration Options can be found here: https://docs.confluent.io/current/schema-registry/docs/config.html
-ConfigurationOverrides: {}
+configurationOverrides: {}
 
 ## Configure resource requests and limits
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ## Confluent has production deployment guidelines here:
 ## ref: https://github.com/confluentinc/schema-registry/blob/master/docs/deployment.rst
 ##
-Resources: {}
+resources: {}
   # limits:
   #  cpu: 100m
   #  memory: 128Mi
@@ -32,18 +32,18 @@ Resources: {}
   #  memory: 128Mi
 
 ## The port on which the SchemaRegistry will be available and serving requests
-ServicePort: 8081
+servicePort: 8081
 
 ## Kafka Settings
 kafka:
   ## This is enabled only to allow installations of this chart without arguments
-  Enabled: true
+  enabled: true
   ## Install only a single Kafka pod in the StatefulSet
   Replicas: 1
   ## Install only a single Zookeeper pod in the StatefulSet
   zookeeper:
     Servers: 1
   ## If `Kafka.Enabled` is `false`, the Zookeeper url servicing the Kafka cluster must be provided
-  ZookeeperUrl: ""
+  zookeeperUrl: ""
   ## If `Kafka.Enabled` is `false`, the Zookeeper port servicing the Kafka cluster must be provided
-  ZookeeperPort: 2181
+  zookeeperPort: 2181
