--- a/incubator/elasticsearch/templates/service-account.yaml
+++ b/incubator/elasticsearch/templates/service-account.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.rbac.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -7,3 +8,4 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "elasticsearch.fullname" . }}
+{{- end -}}
