Maintaner details should be github account related

--- a/stable/sematext-docker-agent/Chart.yaml
+++ b/stable/sematext-docker-agent/Chart.yaml
@@ -11,5 +11,5 @@ icon: https://sematext.com/wp-content/uploads/2017/06/cropped-sematext-logo-1.pn
 sources:
 - https://github.com/sematext/sematext-agent-docker
 maintainers:
-- name: Alen Komljen
-  email: alen.komljen@sematext.com
+- name: komljen
+  email: alen.komljen@live.com
