Option to run Jenkins as non-root user

--- a/stable/jenkins/templates/jenkins-master-deployment.yaml
+++ b/stable/jenkins/templates/jenkins-master-deployment.yaml
@@ -34,7 +34,10 @@ spec:
 {{ toYaml .Values.Master.Tolerations | indent 8 }}
       {{- end }}
       securityContext:
-        runAsUser: 0
+        runAsUser: {{ default 0 .Values.Master.RunAsUser }}
+{{- if (and (ne .Values.Master.RunAsUser 0.0) .Values.Master.FsGroup) }}
+        fsGroup: {{ .Values.Master.FsGroup }}
+{{- end }}
       serviceAccountName: {{ if .Values.rbac.install }}{{ template "jenkins.fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
       initContainers:
         - name: "copy-default-config"
