--- a/incubator/chartmuseum/values.yaml
+++ b/incubator/chartmuseum/values.yaml
@@ -7,6 +7,14 @@ service:
   type: ClusterIP
   externalPort: 8080
   internalPort: 8080
+persistence:
+  mountPath: "/storage"
+  name: "chartpvc"
+  storageName: "storage-volume"
+  enabled: false
+  accessModes:
+    - ReadWriteOnce
+  size: 8Gi
 resources:
   limits:
     cpu: 100m
