--- a/stable/nginx-ingress/templates/controller-configmap.yaml
+++ b/stable/nginx-ingress/templates/controller-configmap.yaml
@@ -10,6 +10,9 @@ metadata:
   name: {{ template "nginx-ingress.controller.fullname" . }}
 data:
   enable-vts-status: "{{ .Values.controller.stats.enabled }}"
+{{- if .Values.headers}}
+  proxy-set-headers: {{ .Release.NameSpace }}/{{ template "nginx-ingress.fullname" . }} -custom-headers
+{{- end }}
 {{- if .Values.controller.config }}
 {{ toYaml .Values.controller.config | indent 2 }}
 {{- end }}
