[stable/concourse] Support Kubernetes Secrets as a credential manager
Upgrade Concourse to 3.7.0 to support the feature.

--- a/stable/concourse/templates/configmap.yaml
+++ b/stable/concourse/templates/configmap.yaml
@@ -39,8 +39,11 @@ data:
   generic-oauth-token-url: {{ default "" .Values.concourse.genericOauthTokenUrl | quote }}
   worker-post-stop-delay-seconds: {{ .Values.worker.postStopDelaySeconds | quote }}
   worker-fatal-errors: {{ default "" .Values.worker.fatalErrors | quote }}
-  {{ if .Values.credentialManager.vault }}
+  {{ if .Values.credentialManager.vault.enabled }}
   vault-url: {{ default "" .Values.credentialManager.vault.url | quote }}
   vault-path-prefix: {{ default "/concourse" .Values.credentialManager.vault.pathPrefix | quote }} 
   vault-auth-backend: {{ default "" .Values.credentialManager.vault.authBackend | quote }}
+  {{ end }}
+  {{ if .Values.credentialManager.kubernetes.enabled }}
+  kubernetes-namespace-prefix: {{ default "concourse-" .Values.credentialManager.kubernetes.namespacePrefix | quote }}
   {{ end }}
