--- a/stable/concourse/templates/secrets.yaml
+++ b/stable/concourse/templates/secrets.yaml
@@ -29,7 +29,7 @@ data:
   generic-oauth-client-secret: {{ default "" .Values.concourse.genericOauthClientSecret | b64enc | quote }}
   encryption-key: {{ default "" .Values.concourse.encryptionKey | b64enc | quote }}
   old-encryption-key: {{ default "" .Values.concourse.oldEncryptionKey | b64enc | quote }}
-  {{ if .Values.credentialManager.vault }}
+  {{ if .Values.credentialManager.vault.enabled }}
   vault-ca-cert: {{ default "" .Values.credentialManager.vault.caCert | b64enc | quote }}
   vault-client-token: {{ default "" .Values.credentialManager.vault.clientToken | b64enc | quote }}
   vault-approle-id: {{ default "" .Values.credentialManager.vault.appRoleId | b64enc | quote }}
