add optional annotations to kubernetes service

--- a/incubator/chartmuseum/templates/service.yaml
+++ b/incubator/chartmuseum/templates/service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "common.fullname" . }}
   labels:
 {{ include "common.labels.standard" . | indent 4 }}
+{{- if .Values.service.annotations }}
+  annotations:
+{{ toYaml .Values.service.annotations | indent 4 }}
+{{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
