--- a/incubator/chartmuseum/values.yaml
+++ b/incubator/chartmuseum/values.yaml
@@ -7,6 +7,8 @@ service:
   type: ClusterIP
   externalPort: 8080
   internalPort: 8080
+  annotations: {}
+    # foo.io/bar: "true"
 resources:
   limits:
     cpu: 100m
