Fix annotations in svc.yaml
If `.Values.service.annotations` is empty (which is the default configuration), the field `annotations` will be blank, producing a failed deployment.

This patch only adds service annotations if they exist.

--- a/stable/redis/templates/svc.yaml
+++ b/stable/redis/templates/svc.yaml
@@ -8,9 +8,9 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
   annotations:
-    {{- range $key, $value := .Values.service.annotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
+{{- if .Values.service.annotations }}
+{{ toYaml .Values.service.annotations | indent 4 }}
+{{- end }}
 {{- if .Values.metrics.enabled }}
 {{ toYaml .Values.metrics.annotations | indent 4 }}
 {{- end }}
