--- a/incubator/zookeeper/values.yaml
+++ b/incubator/zookeeper/values.yaml
@@ -32,3 +32,16 @@ security:
   enabled: false
   runAsUser: 1000
   fsGroup: 1000
+## Additional affinities to add to the worker pods.
+## Useful if you prefer to run workers on non-spot instances, for example
+##
+# additionalAffinities:
+#   nodeAffinity:
+#     preferredDuringSchedulingIgnoredDuringExecution:
+#       - weight: 50
+#         preference:
+#           matchExpressions:
+#             - key: spot
+#               operator: NotIn
+#               values:
+#                 - "true"
