--- a/stable/selenium/Chart.yaml
+++ b/stable/selenium/Chart.yaml
@@ -1,6 +1,6 @@
 name: selenium
-version: 0.2.2
-appVersion: 3.7.1
+version: 0.2.3
+appVersion: 3.8.1
 description: Chart for selenium grid
 keywords:
 - qa
@@ -9,6 +9,6 @@ icon: http://docs.seleniumhq.org/images/big-logo.png
 sources:
 - https://github.com/SeleniumHQ/docker-selenium
 maintainers:
-- name: flah00
-  email: techops@adaptly.com
+- name: diemol
+  email: diemol@gmail.com
 engine: gotpl
