Add rbac to concourse worker

--- a/stable/concourse/values.yaml
+++ b/stable/concourse/values.yaml
@@ -585,3 +585,11 @@ credentialManager:
     ## the value will be written to /concourse-vault/client.key
     ## make sure to also set authBackend to `cert`
     # clientKey: |-
+
+## For RBAC support:
+rbac:
+  create: false
+
+  ## Ignored if rbac.create is true
+  ##
+  serviceAccountName: default
