--- a/stable/sonatype-nexus/templates/service.yaml
+++ b/stable/sonatype-nexus/templates/service.yaml
@@ -15,12 +15,16 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.externalPort }}
+{{- if ne .Values.service.type "ClusterIP" }}
       targetPort: {{ .Values.service.internalPort }}
+{{- end }}
       protocol: TCP
       name: {{ .Values.service.name }}
     {{- if .Values.docker.enabled }}
     - port: {{ .Values.docker.port }}
+{{- if ne .Values.service.type "ClusterIP" }}
       targetPort: {{ .Values.docker.port }}
+{{- end }}
       protocol: TCP
       name: {{ .Values.service.name }}-docker
     {{- end }}
