Prometheus: Make server installation optional
This change allows to have the installation of a prometheus server
optional. This is useful for when you want to install a HA cluster of
alert managers that don't need a prometheus server.

--- a/stable/prometheus/templates/server-deployment.yaml
+++ b/stable/prometheus/templates/server-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.server.enabled -}}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -110,3 +111,4 @@ spec:
           hostPath:
             path: {{ .hostPath }}
       {{- end }}
+{{- end -}}
