--- a/stable/prometheus/values.yaml
+++ b/stable/prometheus/values.yaml
@@ -313,6 +313,10 @@ nodeExporter:
     type: ClusterIP
 
 server:
+  ## If false, prometheus server will not be installed
+  ##
+
+  enabled: true
   ## Prometheus server container name
   ##
   name: server
