--- a/incubator/kafka/values.yaml
+++ b/incubator/kafka/values.yaml
@@ -39,16 +39,20 @@ dataDirectory: "/opt/kafka/data"
 ## Attempt to prevent Kafka pods from being colocated with eachother.
 kafkaAntiAffinityEnabled: true
 ## Prevent Kafka pods from being colocated on the same node.
-## Any value other than `hard` simply defaults to `soft` antiaffinity rules.
+## `hard` means the scheduler must satisfy the constraints or the pod fails to schedule
+## `soft` means the scheduler makes a best-effort to satisfy the constraint and schedules it where
+##   it can if the constraints cannot be met.
 ## See: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#inter-pod-affinity-and-anti-affinity-beta-feature
-kafkaAntiAffinity: "hard"
+kafkaAntiAffinity: "soft"
 
 ## Attempt to prevent Kafka and Zookeeper pods from being colocated.
 zookeeperAntiAffinityEnabled: true
 ## Prevent Kafka and Zookeeper pods from being colocated.
-## Any value other than `hard` simply defaults to `soft` antiaffinity rules.
+## `hard` means the scheduler must satisfy the constraints or the pod fails to schedule
+## `soft` means the scheduler makes a best-effort to satisfy the constraint and schedules it where
+##   it can if the constraints cannot be met.
 ## See: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#inter-pod-affinity-and-anti-affinity-beta-feature
-zookeeperAntiAffinity: "hard"
+zookeeperAntiAffinity: "soft"
 ## The zookeeper pod name which K8s will fuzzy-match against to prevent kafka
 ## pods from being colocated with zookeeper. If you have more than one zookeeper
 ## installation in your cluster, make sure to use a more specific pod name to
