Use HTTPS Probes when using tls

--- a/incubator/docker-registry/templates/deployment.yaml
+++ b/incubator/docker-registry/templates/deployment.yaml
@@ -27,10 +27,16 @@ spec:
             - containerPort: {{ .Values.service.port }}
           livenessProbe:
             httpGet:
+{{- if .Values.tlsSecretName }}
+              scheme: HTTPS
+{{- end }}
               path: /
               port: {{ .Values.service.port }}
           readinessProbe:
             httpGet:
+{{- if .Values.tlsSecretName }}
+              scheme: HTTPS
+{{- end }}
               path: /
               port: {{ .Values.service.port }}
           resources:
