Support generic Erlang VM flags as Values

--- a/incubator/couchdb/templates/statefulset.yaml
+++ b/incubator/couchdb/templates/statefulset.yaml
@@ -32,7 +32,7 @@ spec:
             - containerPort: 9100
           env:
             - name: ERL_FLAGS
-              value: "-name couchdb -setcookie monster"
+              value: "{{ range $k, $v := .Values.erlangFlags }} -{{ $k }} {{ $v }} {{ end }}"
           livenessProbe:
             httpGet:
               path: /
