Simplify headless service definition
The current version of the sidecar container expects the headless
service to export SRV records for a _couchdb service, so there's no
point in parameterizing the name here. In theory the port could be
omitted, but there are a few unresolved issues with that configuration
as of v1.7 so we just put in the stock CouchDB port number.

--- a/incubator/couchdb/templates/headless.yaml
+++ b/incubator/couchdb/templates/headless.yaml
@@ -10,10 +10,8 @@ metadata:
 spec:
   clusterIP: None
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
-      protocol: TCP
-      name: {{ .Values.service.name }}
+    - name: couchdb
+      port: 5984
   selector:
     app: {{ template "couchdb.name" . }}
     release: {{ .Release.Name }}
