Choose a more user-friendly name for spec.replicas
Users familiar with CouchDB may wonder if "replicaCount" refers to the
desired number of replicas per document, as opposed to the size of the
cluster.

--- a/incubator/couchdb/templates/statefulset.yaml
+++ b/incubator/couchdb/templates/statefulset.yaml
@@ -8,7 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.clusterSize }}
   serviceName: {{ template "couchdb.fullname" . }}
   podManagementPolicy: {{ .Values.podManagementPolicy }}
   selector:
