--- a/incubator/couchdb/values.yaml
+++ b/incubator/couchdb/values.yaml
@@ -1,7 +1,5 @@
-# Default values for couchdb.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-replicaCount: 3
+## Sets the initial size of the CouchDB cluster.
+clusterSize: 3
 
 ## Configures the storage volume used by each Pod in the StatefulSet. If a
 ## persistentVolume is not enabled, the Pods will use `emptyDir` ephemeral
